# calc_os_rustver

./: README.md
calc_os/: Cargo.toml  help_os.txt  x86_64-blog_os.json
calc_os/.cargo/: config.toml
calc_os/src/: main.rs  vga_buffer.rs
calc_os_rr/: Cargo.toml
